--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,6 @@
         android:textColor="@color/button_color_selector" />
 
     <TextView
-        style="@style/AppsmallText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -70,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Changseok Oh"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
     <TextView
@@ -84,7 +83,6 @@
         android:shadowDx="10"
         android:shadowDy="10"
         android:shadowRadius="10"/>
-
 
     <Button
         android:layout_width="wrap_content"
@@ -101,6 +99,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MADD9132 Android"
-        android:textColor="#F00"/>
+        android:textColor="@color/lime"/>
 
 </LinearLayout>
